Camios en Nuestros Productos html, se agregaron especias e icono

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </nav>
     </header> <!-- Fin del menú principal-->
     <main> <!-- Inicio del cuerpo de la pagina-->
-        <section class="titulosWara">
+        <section class="titulosWara"> <!-- Titulo -->
             <img src="./img/iniciocamioneta.png" alt="logo de camioneta Wara Pallay" height="60">
             <h1> Distribuidora Wara Pallay</h1>
             <img src="./img/iniciocaja.png" alt="caja png" height="50">
@@ -121,7 +121,6 @@
         <h5>Contacto: gabriel_ortiz.1997@hotmail.com </h5>
         <h5>Todos los derechos reservados ® </h5>
 	</footer> <!-- Fin del pie de pagina-->
-    <!-- Poner este codigo siempre arriba del <body> -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
