--- a/pages/nuestros-productos.html
+++ b/pages/nuestros-productos.html
@@ -46,7 +46,7 @@
       </nav>
     </header> <!-- Fin del menú principal-->
     <main>
-        <section class="titulosWara"> 
+        <section class="titulosWara"> <!-- Titulo -->
             <img src="../img/especias.png" alt="dibujo de especias" width="50">
             <h1> Nuestros Productos</h1>
             <img src="../img/tazate.png" alt="dibujo taza de te" width="50">
@@ -64,79 +64,334 @@
         <section class="productosEspeciasTubo">
             <img src="../img/especiasdos.png" alt="tubos de especias"
             width="50">
-            <h2>Sabores presentados en tubos</h2> 
+            <h2>Sabores presentados en frascos</h2> 
             <img src="../img/especiasdos.png" alt="tubos de especias"
             width="50">
         </section>
         <section class="mx-5"> <!-- Inicio de la tabla de productos -->
-            <table class="table table-bordered border-warning table-hover">
+            <table class="table table-bordered table-hover">
                 <thead class="table-dark">
                     <tr>
-                      <th scope="col">Codigo</th>
+                      <th scope="col">Número</th>
                       <th scope="col">Nombre del Producto</th>
                       <th scope="col">Descripcion del Producto</th>
                       <th scope="col">Imagen</th>
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
-                      <th scope="row">1</th>
+                    <tr class="table-light">
+                      <th scope="row">01</th>
                       <td>Ajos Ahumados</td>
                       <td>Ajos disecados, ahumados y molidos.</td>
-                      <td> --- </td>
+                      <td> 
+                        <div class="icon-image">
+                          <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                        </div> </td>
                     </tr>
-                    <tr>
-                      <th scope="row">2</th>
+                    <tr class="table-light">
+                      <th scope="row">02</th>
                       <td>Baharat</td>
                       <td>Pimienta negra, comino, coriandro, nuez
                         moscada, cardamomo, canela y clavo de olor. </td>
-                      <td>---</td>
+                      <td>
+                        <div class="icon-image">
+                          <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                        </div>
+                      </td>
                     </tr>
-                    <tr>
-                        <th scope="row">3</th>
+                    <tr class="table-light">
+                        <th scope="row">03</th>
                         <td>Blend para mariscos</td>
                         <td>Semillas de eneldo, estragón y
                             cáscaras de limón deshidratado.</td>
-                        <td>---</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
                       </tr>
-                      <tr>
-                        <th scope="row">4</th>
+                      <tr class="table-light">
+                        <th scope="row">04</th>
                         <td>Curry de Jamaica</td>
                         <td>Coriandro, comino, mostaza en
                             grano, semillas de anís, fenogreco, pimienta de Jamaica
                             y cúrcuma, ají cayena y canela, todo tostado.</td>
-                        <td>---</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
                       </tr>
-                      <tr>
-                        <th scope="row">5</th>
+                      <tr class="table-light">
+                        <th scope="row">05</th>
                         <td>Curry de Madrás</td>
                         <td>Coriandro, comino, mostaza negra
                             en grano, canela, cardamomo, fenogreco, pimienta
                             negra, cúrcuma, jengibre y paprika.</td>
-                        <td>---</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
                       </tr>
-                      <tr>
-                        <th scope="row">6</th>
+                      <tr class="table-light">
+                        <th scope="row">06</th>
                         <td>Curry Marroquí</td>
                         <td>Cúrcuma, comino, coriandro, nuez
                             moscada, canela, jengibre y clavo de olor.</td>
-                        <td>---</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
                       </tr>
-                      <tr>
-                        <th scope="row">7</th>
+                      <tr class="table-light">
+                        <th scope="row">07</th>
                         <td>Especias Dulces</td>
                         <td>Anís estrellado, pimienta de Sichuan,
                           canela cassia china, clavo de olor y semillas de hinojo.</td>
-                        <td>---</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
                       </tr>
-                      <tr>
-                        <th scope="row">8</th>
+                      <tr class="table-light">
+                        <th scope="row">08</th>
                         <td>Especias para Wok</td>
                         <td>Jengibre, coriandro, tomate,
                             cebolla, ajo, semillas de sésamo, comino, anís, canela,
                             cáscaras de limón, pimentón dulce y azúcar.</td>
-                        <td>---</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
                       </tr>
+                      <tr class="table-light">
+                        <th scope="row">09</th>
+                        <td>Especias Thai</td>
+                        <td>Chiles secos, coriandro, comino, pimienta
+                          negra, clavo de olor, anís estrellado, nuez moscada,
+                          canela, cardamomo y sal rosada.</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">10</th>
+                        <td>Garam Masala</td>
+                        <td>Coriandro, comino, anís estrellado,
+                          canela, clavo de olor, cardamomo, pimienta negra,
+                          macís, nuez moscada, laurel, fenogreco, ají cayena, ajo,
+                          cebolla y paprika.</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">11</th>
+                        <td>Merkén</td>
+                        <td>Ají cacho de cabra ahumado y molido, sal
+                          rosada y coriandro</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">12</th>
+                        <td>Paprika</td>
+                        <td>Pimentón picante </td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">13</th>
+                        <td>Pebre Araucano</td>
+                        <td> Ají, cebolla, tomate, ajo, pimentón,
+                          coriandro y pimienta.</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">14</th>
+                        <td>Pimentón Ahumado</td>
+                        <td>Pimientos rojos secos, ahumados
+                          y molidos.</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">15</th>
+                        <td>Pimienta Negra</td>
+                        <td>Pimienta negra en grano.</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">16</th>
+                        <td>Pimientas Ahumadas</td>
+                        <td>Pimienta verde, negra, blanca y
+                          de Jamaica, ahumadas.</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">17</th>
+                        <td>Ras El Anout</td>
+                        <td>Coriandro, comino, cardamomo,
+                          semillas de hinojo, pimienta negra, cúrcuma, canela y
+                          paprika.</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">18</th>
+                        <td>Tacos</td>
+                        <td>Ají, cebolla, comino, ajo, orégano, azúcar y sal
+                          rosada.</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">19</th>
+                        <td>Tandoori Masala</td>
+                        <td>Pimentón dulce, paprika, ajo en
+                          polvo, sal rosada, cebolla, coriandro, comino, cúrcuma,
+                          jengibre, pimienta negra, clavo de olor, cardamomo,
+                          canela, nuez moscada, todo tostado.</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">20</th>
+                        <td>Sal Ahumada con Orégano</td>
+                        <td> sal rosada ahumada, orégano, ajo y pimienta negra. </td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">21</th>
+                        <td>Sal con Cebolla y Albahaca</td>
+                        <td>Sal rosada, cebolla, albahaca, ají y hojas de laurel. </td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">22</th>
+                        <td>Sal con Hierbas y Cúrcuma</td>
+                        <td>Sal rosada, orégano, salvia, estragón, ajo en polvo, jengibre, romero y cúrcuma.</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">23</th>
+                        <td>Sal con Hongos Ahumados</td>
+                        <td>Sal rosada, hongos ahumados y molidos, tomillo y ajo.</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">24</th>
+                        <td>Sal con Mostaza y Romero</td>
+                        <td>Sal rosada, cáscaras de limón, mostaza en grano, romero y azúcar negra.</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">25</th>
+                        <td>Sal con Pimentón y Ajos Ahumados</td>
+                        <td>Sal rosada, pimentón y ajos ahumados.</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">26</th>
+                        <td>Sal con Pimientas y Citricos</td>
+                        <td>Sal rosada con cáscaras de limón y pimienta negra.</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">27</th>
+                        <td>Sal con Rosas</td>
+                        <td>Sal rosada, pétalos de rosas, romero y cáscaras de naranja.</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">28</th>
+                        <td>Sal Griega</td>
+                        <td>Sal rosada, aceitunas deshidratadas, cáscaras de limón y ajo.</td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="table-light">
+                        <th scope="row">29</th>
+                        <td>Salt Kiss Of Fire</td>
+                        <td>Sal rosada, ají, comino, cebolla y pimentón. </td>
+                        <td>
+                          <div class="icon-image">
+                            <img src="../img/icon-image.png" width="25" alt="icono de imagen">
+                          </div>
+                        </td>
                   </tbody>
             </table>
         </section> <!-- Fin de la tabla de productos -->
@@ -153,7 +408,6 @@
         <h5>Contacto: gabriel_ortiz.1997@hotmail.com </h5>
         <h5>Todos los derechos reservados ® </h5>
 	</footer> <!-- Fin del pie de pagina-->
-  <!-- Poner este codigo siempre arriba del <body> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
