--- a/pages/recetas-pagina-dos.html
+++ b/pages/recetas-pagina-dos.html
@@ -46,8 +46,8 @@
         </nav>
     </header> <!-- Fin del menú principal-->
     <main> 
-        <section> <!--Subtitulo de la pagina-->
-            <div class="titulosWara">
+        <section>
+            <div class="titulosWara"> <!-- Titulo -->
                 <img src="../img/cubiertos.png" alt="cubiertos" height="50">
                 <h1> Recetas y Recomendaciones </h1>
                 <img src="../img/comida.png" alt="comida" height="50">
@@ -65,7 +65,7 @@
               <li class="page-item disabled"><a class="page-link" href="#">Siguiente &raquo; </a></li>
             </ul>
         </div>
-        </section> <!--Cambio de pestaña-->
+        </section>
         <section class="redesSociales"> <!--Redes Sociales-->
           <a class="facebook animate__animated animate__pulse animate__infinite" href="https://www.facebook.com/WaraPallay/" target="_blank"><img loading="lazy" src="../img/facebook.png" alt="logoFacebook" height="49"></a>
           <a class="instagram animate__animated animate__pulse animate__infinite" href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img loading="lazy" src="../img/instagram.png" alt="logoIntagram" height="50"></a>
