--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -47,13 +47,13 @@
     </header> <!-- Fin del menú principal-->
     <main> 
         <section> <!--Subtitulo de la pagina-->
-            <div class="titulosWara">
+            <div class="titulosWara"> <!-- Titulo -->
                 <img src="../img/cubiertos.png" alt="cubiertos" height="50">
                 <h1> Recetas y Recomendaciones </h1>
                 <img src="../img/comida.png" alt="comida" height="50">
             </div>
         </section>
-        <section class="cuerpoTarjeta">
+        <section class="cuerpoTarjeta"> <!-- Inicio de tarjetas de recetas -->
             <div class="tarjeta">
                 <img src="../img/arrozconesp.jpg" alt="Foto de plato de arroz condimentado" height="200">
                 <h2> Arroz con especias dulces:</h2>
@@ -124,7 +124,7 @@
                   Poner la carne en una bolsa para horno, y condimentar con Zahatar Wara Pallay, mostaza, verdeo y un poco de aceite de oliva. La cocinera sugiere además, un toque de Seis Pimientas Wara Pallay.  Llevar la preparación a horno moderado por dos horas. Una vez que esté todo listo, elegir un buen vino o una buena bebida para acompañar esta deliciosa propuesta.
                 </p>
                 </div>
-        </section>
+        </section> <!-- Fin de seccion de recetas -->
         <section> <!--Cambio de pestaña-->
         <div aria-label="">
             <ul class="pagination">
@@ -134,7 +134,7 @@
               <li class="page-item"><a class="page-link" href="../pages/recetas-pagina-dos.html">Siguiente &raquo;</a></li>
             </ul>
         </div>
-        </section> <!--Cambio de pestaña-->
+        </section>
         <section class="redesSociales"> <!--Redes Sociales-->
           <a class="facebook animate__animated animate__pulse animate__infinite" href="https://www.facebook.com/WaraPallay/" target="_blank"><img loading="lazy" src="../img/facebook.png" alt="logoFacebook" height="49"></a>
           <a class="instagram animate__animated animate__pulse animate__infinite" href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img loading="lazy" src="../img/instagram.png" alt="logoIntagram" height="50"></a>
