--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -47,7 +47,7 @@
     </header>
     <!-- Fin del menú principal-->
         <main>
-            <section class="titulosWara">
+            <section class="titulosWara"> <!-- Titulo -->
                 <img src="../img/email.png" alt="carta email" width="50">
                 <h1> Contacto</h1>
                 <img src="../img/placeholder.png" alt="ubicacion" width="50">
@@ -144,7 +144,6 @@
             <h5>Contacto: gabriel_ortiz.1997@hotmail.com </h5>
             <h5>Todos los derechos reservados ® </h5>
         </footer> <!-- Fin del pie de pagina-->
-        <!-- Poner este codigo siempre arriba del <body> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
