--- a/pages/nuestros-clientes.html
+++ b/pages/nuestros-clientes.html
@@ -46,12 +46,12 @@
         </nav>
     </header> <!-- Fin del menú principal-->
     <main> 
-        <section class="titulosWara">
+        <section class="titulosWara"> <!-- Titulo -->
             <img src="../img/clienteuno.png" alt="cliente" width="50">
             <h1> Nuestros Clientes</h1>
             <img src="../img/clientedos.png" alt="cliente" width="50">
         </section>
-        <section class="nuestrosClientes">
+        <section class="nuestrosClientes"> <!-- Inicio de seccion de clientes -->
           <div class="card border-warning mb-3" style="max-width: 16.5rem;">
             <div><a href="https://www.instagram.com/brie.lacumbre/?hl=en" target="_blank"><img src="../img/brielacumbre.png" alt="Logo de comercio, Brie." width="260"></a></div>
             <div class="card-body">
@@ -96,7 +96,7 @@
             <p class="card-text">Local de Delicatesen ubicado en la localidad de Villa Allende en la calle Pres. Perón 145.</p>
           </div>
         </div>
-        </section>
+        </section> <!-- Fin de seccion de clientes -->
         <section class="redesSociales"> <!--Redes Sociales-->
           <a class="facebook animate__animated animate__pulse animate__infinite" href="https://www.facebook.com/WaraPallay/" target="_blank"><img loading="lazy" src="../img/facebook.png" alt="logoFacebook" height="49"></a>
           <a class="instagram animate__animated animate__pulse animate__infinite" href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img loading="lazy" src="../img/instagram.png" alt="logoIntagram" height="50"></a>
@@ -110,7 +110,6 @@
         <h5>Contacto: gabriel_ortiz.1997@hotmail.com </h5>
         <h5>Todos los derechos reservados ® </h5>
 	</footer> <!-- Fin del pie de pagina-->
-    <!-- Poner este codigo siempre arriba del <body> -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
