--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </button>
               </div>
               <div class="cuadroTexto">
-                <h2>Delicatessen... ¿de dónde viene esta palabra?</h2>
+                <h2>Delicatessen... ¿De dónde viene esta palabra?</h2>
                 <p>
                 La palabra "delicatessen" es de origen alemán. Es una palabra compuesta por "delikat", que significa delicioso o deliciosa, y "essen", que significa comida.
                 Usualmente, esta palabra se asocia a exquisiteces, alimentos de alta calidad o exóticos, ya sea por su rareza o por su gran calidad de ejecución. También se denomina así a la tienda donde pueden conseguirse este tipo de alimentos.
